compiler/testData/diagnostics/tests/modifiers/primaryConstructorMissingBrackets.fir.kt
// RUN_PIPELINE_TILL: SOURCE
class A private constructor<!SYNTAX!><!> {
}
